<?xml version="1.0"?>
<package format="2">
  <name>tcp_tunnel</name>
  <version>0.0.1</version>
  <description>Nodes that allow reliable TCP relay of ROS topics between remote machines.</description>
  <maintainer email="simon-pierre.deschenes.1@ulaval.ca">Simon-Pierre Deschênes</maintainer>
  <license>BSD-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_type_introspection</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>rosmsg_cpp</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ros_type_introspection</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>
  <build_export_depend>rosmsg_cpp</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_type_introspection</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>rosmsg_cpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
